--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,6 +101,7 @@ p {
   line-height: 1.6;
   text-align: center;
   color: #EFF5F4;
+  z-index: 1;
 }
 
 a {
@@ -272,6 +273,7 @@ iframe {
     height: 200px !important;
     width: 200px !important;
     margin: 2px !important;
+    z-index: 1;
   }
 
   img.wedding-party {
@@ -566,6 +568,10 @@ iframe {
   align-items: center;
   margin: 2em;
   padding: 0 1em;
+}
+
+.column h1 {
+  margin-bottom: 2em;
 }
 
 .column img {
