--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,16 +130,9 @@ li {
   padding: 0 0.75em;
 }
 
-.quotation {
-  quotes: '\201C''\201D''\2018''\2019';
-  padding: 10px 20px;
-  line-height: 1.4;
-}
-
-blockquote div.footer {
-  margin: 0;
-  text-align: center;
-  font-style: italic;
+strong {
+  font-weight: 600;
+  font-size: larger;
 }
 
 nav {
@@ -607,10 +600,6 @@ img.wedding-party {
   align-items: flex-start;
   text-align: left;
   align-self: flex-start;
-}
-
-.align-text-justify {
-  text-align: justify;
 }
 
 .center-align {
