--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,15 +35,17 @@ header {
 }
 
 header .header-background-color {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(38, 34, 36, 0.6) 100%);
+  /* background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(38, 34, 36, 0.6) 100%); */
+  background: linear-gradient(180deg, rgba(253, 152, 73, 0.7) 0%, rgba(212, 30, 93, 0.35) 100%);
   height: 100%;
 }
 
 header .header-main {
   font-family: Kristi;
-  font-size: 6em;
+  font-size: 5em;
   letter-spacing: 0.0064em;
   color: #402C34;  
+  opacity: .8;
 }
 
 header .header-first {
@@ -68,10 +70,10 @@ header .header-last {
 
 header .header-sub {
   font-family: Kristi;
-  font-size: 7em;
+  font-size: 6.5em;
   text-align: center;
   letter-spacing: 0.0064em;
-  color: #E0C1CE;
+  color: #E5E5E5;
   opacity: 0.8;
 }
 
@@ -256,6 +258,12 @@ iframe {
   align-self: center;
 }
 
+.section > p {
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+
 /*laptops*/
 @media only screen and (min-width: 414px) and (max-width: 1440px) {
   body {
@@ -336,6 +344,22 @@ iframe {
     align-self: auto !important;
     padding-top: 8vh !important;
     text-overflow: ellipsis;
+  }
+
+  header .header-main {
+    font-size: 2em;
+  }
+  
+  header .header-first {
+    font-size: 1.1em;
+  }
+  
+  header .header-last {
+    font-size: 2.5em;
+  }
+  
+  header .header-sub {
+    font-size: 2em;
   }
 
   nav {
@@ -495,6 +519,20 @@ iframe {
     margin: 0 0.1em !important;
   }
 
+  .section > p {
+    padding-left: .25em;
+    padding-right: .25em;
+  }
+
+  .column h1 {
+    margin-bottom: .5em !important;
+  }
+
+  iframe {
+    align-self: center;
+    max-width: 100vw;
+  }
+
   footer,
   .footer-credit {
     margin: 0 !important;
@@ -517,7 +555,7 @@ iframe {
   align-self: center;
 }
 
-.section h3 {
+#gr.section h3 {
   margin-top: 3em;
 }
 
@@ -535,22 +573,22 @@ iframe {
 }
 
 .orange-background {
-  background: linear-gradient(#ffa14d, #ff9233);
+  background: linear-gradient(rgb(255, 161, 77), #ff9233);
   color: #eff5f4;
 }
 
 .red-background {
-  background: linear-gradient(#ED443B, #D43D35);
+  background: linear-gradient(rgb(237, 68, 59), #D43D35);
   color: #eff5f4;
 }
 
 .pink-background {
-  background: linear-gradient(#E52065, #CC1D5A);
+  background: linear-gradient(rgb(229, 32, 101), #CC1D5A);
   color: #eff5f4;
 }
 
 .purple-background {
-  background: linear-gradient(#BA1178, #A10E67);
+  background: linear-gradient(rgb(186, 17, 120), #A10E67);
   color: #eff5f4;
 }
 
